# client-rust-test

./: .gitignore  Cargo.toml  Makefile  README.md  client-rust-test.code-workspace  ledger.toml  pins.toml  rust-toolchain.toml
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
cluster/: docker-compose-3store.yml  docker-compose.yml  pd-3store.toml  pd.toml  tikv.toml  wait-ready.sh
crates/harness/: Cargo.toml
crates/harness/src/: cluster.rs  lib.rs
crates/parity-proto/: Cargo.toml
crates/parity-proto/src/: class.rs  command.rs  lib.rs  observation.rs  project.rs  trace.rs
crates/parity-runner/: Cargo.toml
crates/parity-runner/src/: driver.rs  main.rs  run.rs  scenario.rs
crates/rust-driver/: Cargo.toml
crates/rust-driver/src/: exec.rs  main.rs  mapping.rs
crates/wyrd-gate/: Cargo.toml
crates/wyrd-gate/src/: lib.rs  traits.rs
crates/wyrd-gate/tests/: failpoint_gate.rs  gate.rs
crates/wyrd-gate/tests/common/: mod.rs
docs/: client-rules.md  parity-roadmap.md  upstream-issue-map.md
findings/: ISSUE.md  failpoint-evidence.txt  finding-3-issue-body.md  finding-3-pessimistic-writeconflict.md  fix-267-logging.patch  fix-545-pessimistic-rollback.patch  fix-check-txn-status-wrapper.patch  gate-evidence.txt  logging-267-evidence.txt  pessimistic-rollback-leaves-prewrite-locks.md  repro-545-pessimistic-rollback.rs  txn-not-found-lock-resolution.md
go/: go.mod  go.sum
go/driver/: exec.go  main.go  observation.go  probe.go
scenarios/: orphaned-lock-resolution.json  raw-checksum.json
scripts/: check-pins.sh  cluster-env.sh  gate-verdict.sh  ledger-check.sh  provenance.sh
tests/: failpoint_gate.rs  gate.rs
tests/common/: cluster.rs  mod.rs
