# The TiKV client parity harness — a Cargo workspace.
#
# The repo's purpose is to find and close behavioural gaps between the TiKV Rust
# client (tikv/client-rust) and the Go client (tikv/client-go). The members split
# along that purpose:
#
#   harness    client-agnostic fixtures: $PD_ADDRS, PD ground truth for region
#              layout, deterministic byte corpora. Anything a suite OR a future
#              differential runner needs, and that says nothing about wyrd.
#   wyrd-gate  the M4 evaluation gate — an application-contract suite driven over
#              tikv-client. It was once the whole repo; it is now one suite among
#              the ones to come, and the template for them.
#
# The crate under test is a PATH dependency on the sibling checkout, deliberately:
# pointing the harness at a local branch to prove a fix is the entire point of the
# repo. Cargo records no source or rev for a path dep, so the LOCKFILE PINS
# NOTHING — pins.toml plus scripts/provenance.sh is what closes that hole, by
# recording and asserting what was actually exercised.

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.93" # matches the crate under test (client-rust pins 1.93)
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# THE pin point: declared once, inherited by every member that writes
# `tikv-client.workspace = true`.
tikv-client = { path = "../client-rust" }

harness = { path = "crates/harness" }

async-trait = "0.1"
bytes = "1"
env_logger = "0.10"
log = "0.4"
# PD's HTTP API is the ground truth for region layout. rustls, not native-tls: PD
# is plain HTTP here, and this avoids an OpenSSL build just to read /pd/api/v1/*.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# Fault injection. Deliberately WITHOUT the `failpoints` feature here — see
# crates/wyrd-gate/Cargo.toml, where it is opt-in.
fail = "0.4"
