[package]
name = "harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Client-agnostic fixtures for the TiKV client parity harness: $PD_ADDRS, PD region ground truth, deterministic byte corpora."

[dependencies]
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
