# THE COMPARATOR.
#
# NOTE WHAT IS ABSENT, AND THAT IT IS ENFORCED HERE: tikv-client.
#
# The thing that decides a verdict must not be able to reach for the subject under
# test. If the runner could link tikv-client, it could — by accident or by convenience
# — resolve a lock, retry a read, or otherwise DO the very thing it is supposed to be
# measuring, and the result would silently become a statement about the harness rather
# than about the client. `parity-proto` carries no client dependency either, so this
# holds transitively.
#
# The drivers link the clients. The runner links neither. That separation is the
# reason a divergence means what it says.
[package]
name = "parity-runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Drives both clients through one scenario and diffs what they observed."

[[bin]]
name = "parity-runner"
path = "src/main.rs"

[dependencies]
# harness: $PD_ADDRS, unique_prefix, and PD's region layout as ground truth.
# Client-agnostic by charter — which is exactly why the comparator may use it.
harness.workspace = true
parity-proto.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
